crates/aerro/tests/ui/fail/unknown_attr.stderr
error: unknown aerro attribute `nonsense`
 --> tests/ui/fail/unknown_attr.rs:5:40
  |
5 |     #[aerro(code = Business::NotFound, nonsense = "x")]
  |                                        ^^^^^^^^
